# wca-sac-app

./: .gitmodules  README.md
backend/: .env  Cargo.toml
backend/assets/: continents.json  events.json
backend/src/: graph_type_validator.rs  main.rs  services.rs  utils.rs  wca_export.rs  wca_sac.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  Graph.tsx  Home.tsx  utils.ts
frontend/src/context/: activeSelection.ts  continents.ts  countries.ts  wcaEvents.ts
