[package]
name = "wca-sac-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
anyhow = "1.0.86"
dotenv = "0.15.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["full"] }
tokio-cron-scheduler = "0.10.2"
zip-extract = "0.1.3"
