[package]
name = "wca-sac-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
anyhow = "1.0.89"
csv = "1.3.0"
dotenv = "0.15.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = "0.12.8"
serde = "1.0.210"
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
zip-extract = "0.2.1"
